# sunset_mcp_calculator

./: main.py  pyproject.toml
src/sunset_mcp_calculator/: __init__.py  __main__.py  server.py  sunset_mcp_calculator.py
